<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        tools:context="in.jiyofit.basic_app.SettingsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/asettings_tv_age"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/asettings_et_age"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2" />

            <TextView
                android:id="@+id/asettings_tv_weight"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/asettings_et_weight"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/asettings_height"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/asettings_dd_feet"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp" />

            <Spinner
                android:id="@+id/asettings_dd_inches"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/asettings_btn_calculate"
            android:onClick="calculateDetails"
            style="@style/normalButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="Calculate BMI"
            android:textAllCaps="false" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/asettings_tv_bmi"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/bmi"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/asettings_tv_calculatedBMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/asettings_tv_fat"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/fat"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/asettings_tv_calculatedFat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/asettings_tv_target"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/asettings_et_target"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="5"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/asettings_tv_recotarget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walkreminder"
                android:textSize="22sp"
                android:textColor="@color/black"/>

            <CheckBox
                android:id="@+id/asettings_cb_walkreminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="22sp"
                android:showText="true"
                android:textAllCaps="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/target"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/asettings_dd_workouttype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/asettings_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/asettings_tv_duration"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <RadioButton
                android:id="@+id/asettings_rb_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="10 feuV"/>

            <RadioButton
                android:id="@+id/asettings_rb_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="22sp"
                android:text="20 feuV"/>

        </RadioGroup>

        <Button
            android:id="@+id/asettings_btn_submit"
            android:onClick="saveDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            style="@style/normalButtonStyle"
            android:layout_gravity="center_horizontal"
            android:text="Save"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>